// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonComponent Ensure that changes color when changing color property 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
>
  <hmv-button
    color="accent"
  >
    <button
      class="mat-focus-indicator mat-raised-button mat-button-base _mat-animation-noopable hmv-btn-accent hmv-btn-accent--hover"
      mat-raised-button=""
      type="submit"
    >
      <span
        class="mat-button-wrapper"
      >
        TESTE
      </span>
      <span
        class="mat-ripple mat-button-ripple"
        matripple=""
      />
      <span
        class="mat-button-focus-overlay"
      />
    </button>
  </hmv-button>
</ng-component>
`;

exports[`ButtonComponent Should create component 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
>
  <hmv-button>
    <button
      class="mat-focus-indicator mat-raised-button mat-button-base _mat-animation-noopable hmv-btn-primary hmv-btn-primary--hover"
      mat-raised-button=""
      type="submit"
    >
      <span
        class="mat-button-wrapper"
      >
        TESTE
      </span>
      <span
        class="mat-ripple mat-button-ripple"
        matripple=""
      />
      <span
        class="mat-button-focus-overlay"
      />
    </button>
  </hmv-button>
</ng-component>
`;
